# lightdash-pre-commit

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  requirements.txt  setup.cfg
.github/workflows/: lint.yml  test.yml
lightdash-pre-commit/: check_duplicate_metric_dimension_names.py
lightdash_pre_commit/: check_duplicate_metric_dimension_names.py  core.py  find_incorrect_indentation_of_dims_and_metrics.py  find_missing_dimension_group_labels.py  find_missing_metric_group_labels.py  find_missing_model_group_labels.py  utils.py
tests/: test_check_duplicate_metric_dimension_names.py  test_find_incorrect_indentation_of_dims_and_metrics.py  test_find_missing_dimension_group_label.py  test_find_missing_metric_group_labels.py  test_find_missing_model_group_labels.py  test_target.yml  test_utils.py
