[metadata]
name = pre_commit_hooks
version = 0.0.3
description = List of [pre-commit](https://pre-commit.com) hooks to ensure the quality of your [lightdash]https://www.lightdash.com/) project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dbt-checkpoint/dbt-checkpoint
author = Craig Lathrop
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    pyyaml
python_requires = >=3.7.1

[console_scripts]
check-duplicate-dims-and-metrics = lightdash-pre-commit.check_duplicate_metric_dimension_names:main

[bdist_wheel]
universal = 1
